<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
    <view
        class="eu.janmuller.android.simplecropimage.CropImageView"
        android:id="@+id/image"
        android:background="#55000000"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/discard"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/discard_image" />

        <ImageButton
            android:id="@+id/rotateLeft"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_rotate_left"
            android:contentDescription="@string/rotate_counterclockwise" />

        <ImageButton
            android:id="@+id/rotateRight"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_rotate_right"
            android:contentDescription="@string/rotate_clockwise" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:src="@android:drawable/ic_menu_save"
            android:contentDescription="@string/save_image" />

    </LinearLayout>
</RelativeLayout>
